sf-src/force-app/main/default/objects/Opportunity/fields/AccountDivision__c.field-meta.xml
<CustomField>
    <fullName>AccountDivision__c</fullName>
    <label>法人区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>国内</fullName>
                <default>true</default>
                <label>国内</label>
            </value>
            <value>
                <fullName>韓国</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>