sf-src/force-app/main/default/objects/Opportunity/fields/BusinessStatus__c.field-meta.xml
<CustomField>
    <fullName>BusinessStatus__c</fullName>
    <label>事業状況</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>エステサロン</fullName>
            </value>
            <value>
                <fullName>クリニック</fullName>
            </value>
            <value>
                <fullName>開業前</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>