sf-src/force-app/main/default/objects/Opportunity/fields/CurrencyType__c.field-meta.xml
<CustomField>
    <fullName>CurrencyType__c</fullName>
    <label>通貨</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JPY</fullName>
                <default>true</default>
                <label>JPY</label>
            </value>
            <value>
                <fullName>KRW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>