sf-src/force-app/main/default/objects/Opportunity/fields/ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRate__c</fullName>
    <label>為替レート</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>