sf-src/force-app/main/default/objects/Opportunity/fields/InquiryCategory__c.field-meta.xml
<CustomField>
    <fullName>InquiryCategory__c</fullName>
    <label>問い合わせ種類</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>費用について</fullName>
            </value>
            <value>
                <fullName>施術について</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>