sf-src/force-app/main/default/objects/Opportunity/fields/InquiryDate__c.field-meta.xml
<CustomField>
    <fullName>InquiryDate__c</fullName>
    <label>問い合わせ日時</label>
    <type>DateTime</type>
</CustomField>