sf-src/force-app/main/default/objects/Opportunity/fields/InquiryExternalId__c.field-meta.xml
<CustomField>
    <fullName>InquiryExternalId__c</fullName>
    <label>問い合わせ外部ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>