sf-src/force-app/main/default/objects/Opportunity/fields/InquiryMessage__c.field-meta.xml
<CustomField>
    <fullName>InquiryMessage__c</fullName>
    <label>問い合わせ内容</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>