sf-src/force-app/main/default/objects/Opportunity/fields/InquirySource__c.field-meta.xml
<CustomField>
    <fullName>InquirySource__c</fullName>
    <label>流入経路</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>インスタグラム</fullName>
            </value>
            <value>
                <fullName>知人の紹介</fullName>
            </value>
            <value>
                <fullName>Google広告</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>