sf-src/force-app/main/default/objects/Opportunity/fields/IS_Owner__c.field-meta.xml
<CustomField>
    <fullName>IS_Owner__c</fullName>
    <label>IS担当者（商談獲得者）</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>IS担当商談</relationshipLabel>
    <relationshipName>IS_Opportunities</relationshipName>
</CustomField>