sf-src/force-app/main/default/objects/Opportunity/fields/JPYAmount__c.field-meta.xml
<CustomField>
    <fullName>JPYAmount__c</fullName>
    <formula>0</formula>
    <label>円換算金額</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>