sf-src/force-app/main/default/objects/Opportunity/fields/MeetingDateTime__c.field-meta.xml
<CustomField>
    <fullName>MeetingDateTime__c</fullName>
    <label>商談獲得日時</label>
    <type>DateTime</type>
</CustomField>