sf-src/force-app/main/default/objects/Opportunity/fields/NextActionDate__c.field-meta.xml
<CustomField>
    <fullName>NextActionDate__c</fullName>
    <label>次回アクション日時</label>
    <type>DateTime</type>
</CustomField>