sf-src/force-app/main/default/objects/Opportunity/fields/NextActionMethod__c.field-meta.xml
<CustomField>
    <fullName>NextActionMethod__c</fullName>
    <label>次回アクション手法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>LINE</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>