sf-src/force-app/main/default/objects/Opportunity/fields/NextMeetingDate__c.field-meta.xml
<CustomField>
    <fullName>NextMeetingDate__c</fullName>
    <label>次回ミーティング予定日</label>
    <type>DateTime</type>
</CustomField>