sf-src/force-app/main/default/objects/Opportunity/fields/ResponsePreference__c.field-meta.xml
<CustomField>
    <fullName>ResponsePreference__c</fullName>
    <label>対応希望</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>資料請求のみ希望</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>