sf-src/force-app/main/default/objects/Opportunity/recordTypes/FLOWNEE_Consumer.recordType-meta.xml
<RecordType>
    <fullName>FLOWNEE_Consumer</fullName>
    <active>true</active>
    <businessProcess>FLOWNEE_Consumer_Process</businessProcess>
    <description>FLOWNEE B2C会員 商談</description>
    <label>FLOWNEE（会員）</label>
</RecordType>