sf-src/force-app/main/default/objects/Opportunity/recordTypes/LEMELLA_Wholesale.recordType-meta.xml
<RecordType>
    <fullName>LEMELLA_Wholesale</fullName>
    <active>true</active>
    <businessProcess>LEMELLA_Wholesale_Process</businessProcess>
    <description>LEMELLA B2Bサロン卸（説明会あり） 商談</description>
    <label>LEMELLA（卸）</label>
</RecordType>