sf-src/force-app/main/default/objects/Opportunity/recordTypes/LHALA_Wholesale.recordType-meta.xml
<RecordType>
    <fullName>LHALA_Wholesale</fullName>
    <active>true</active>
    <businessProcess>LHALA_Wholesale_Process</businessProcess>
    <description>LHALA B2Bサロン卸 商談</description>
    <label>LHALA（卸）</label>
</RecordType>