sf-src/force-app/main/default/objects/Opportunity/recordTypes/Minerva_Consumer.recordType-meta.xml
<RecordType>
    <fullName>Minerva_Consumer</fullName>
    <active>true</active>
    <businessProcess>Minerva_Consumer_Process</businessProcess>
    <description>Minerva B2C/サロン会員 商談</description>
    <label>Minerva（会員）</label>
</RecordType>